adding the instructors and the map of services with mapbox

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+    <link rel="stylesheet" href="./styles.css">
     <title>FrontEnd Bootcamp</title>
 </head>
 
@@ -174,10 +176,184 @@
     <section id="questions" class="p-5">
         <div class="container">
             <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+            <!-- item 1 -->
+            <div class="accordion accordion-flush" id="questions">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-one">
+                      Where excactly are you located?
+                    </button>
+                    </h2>
+                    <div id="question-one" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+                        <div class="accordion-body"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit aperiam rerum labore velit? Voluptatem sequi, rem magnam saepe maxime sit architecto aliquam? Veniam laudantium quo reiciendis unde adipisci quod repudiandae. Nesciunt,
+                            libero doloremque aspernatur sapiente quisquam optio itaque, modi temporibus facilis excepturi, perferendis nihil nobis reprehenderit harum a assumenda sunt.
+                        </div>
+                    </div>
+                    <!-- Item 2 -->
+                    <div class="accordion accordion-flush" id="questions">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-two">
+                              How much does it cost to attend?
+                            </button>
+                            </h2>
+                            <div id="question-two" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+                                <div class="accordion-body"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit aperiam rerum labore velit? Voluptatem sequi, rem magnam saepe maxime sit architecto aliquam? Veniam laudantium quo reiciendis unde adipisci quod repudiandae.
+                                    Nesciunt, libero doloremque aspernatur sapiente quisquam optio itaque, modi temporibus facilis excepturi, perferendis nihil nobis reprehenderit harum a assumenda sunt.
+                                </div>
+                            </div>
+                            <!-- Item 3 -->
+                            <div class="accordion accordion-flush" id="questions">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-three">
+                                      What do I need to Know?
+                                    </button>
+                                    </h2>
+                                    <div id="question-three" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+                                        <div class="accordion-body"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit aperiam rerum labore velit? Voluptatem sequi, rem magnam saepe maxime sit architecto aliquam? Veniam laudantium quo reiciendis unde adipisci quod repudiandae.
+                                            Nesciunt, libero doloremque aspernatur sapiente quisquam optio itaque, modi temporibus facilis excepturi, perferendis nihil nobis reprehenderit harum a assumenda sunt.
+                                        </div>
+                                    </div>
+                                    <!-- Item 4 -->
+                                    <div class="accordion accordion-flush" id="questions">
+                                        <div class="accordion-item">
+                                            <h2 class="accordion-header">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-four">
+                                              How Do I signed up?
+                                            </button>
+                                            </h2>
+                                            <div id="question-four" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+                                                <div class="accordion-body"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit aperiam rerum labore velit? Voluptatem sequi, rem magnam saepe maxime sit architecto aliquam? Veniam laudantium quo reiciendis unde adipisci
+                                                    quod repudiandae. Nesciunt, libero doloremque aspernatur sapiente quisquam optio itaque, modi temporibus facilis excepturi, perferendis nihil nobis reprehenderit harum a assumenda sunt.
+                                                </div>
+                                            </div>
+                                            <!-- Item 5 -->
+                                            <div class="accordion accordion-flush" id="questions">
+                                                <div class="accordion-item">
+                                                    <h2 class="accordion-header">
+                                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-five">
+                                                        Do you help me find a job?
+                                                    </button>
+                                                    </h2>
+                                                    <div id="question-five" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+                                                        <div class="accordion-body"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit aperiam rerum labore velit? Voluptatem sequi, rem magnam saepe maxime sit architecto aliquam? Veniam laudantium quo reiciendis unde
+                                                            adipisci quod repudiandae. Nesciunt, libero doloremque aspernatur sapiente quisquam optio itaque, modi temporibus facilis excepturi, perferendis nihil nobis reprehenderit harum a assumenda sunt.
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+    </section>
+    <!-- Instructors-->
+    <section id="instructors" class="p-5 bg-primary">
+        <div class="container">
+            <h2 class="text-center text-white">Our instructors</h2>
+            <p class="lead text-center text-white mb-5">
+                Our instructors all have 5+ years working as a web developer in the industry
+            </p>
+            <div class="row g-4">
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3" alt="">
+                            <h2 class="card-title mb-3">Jhon Doe</h3>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit harum consequuntur explicabo quisquam consectetur sed?</p>
+                                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3" alt="">
+                            <h2 class="card-title mb-3">Jane Doe</h3>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit harum consequuntur explicabo quisquam consectetur sed?</p>
+                                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/men/12.jpg" class="rounded-circle mb-3" alt="">
+                            <h2 class="card-title mb-3">Steve Smith</h3>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit harum consequuntur explicabo quisquam consectetur sed?</p>
+                                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/women/12.jpg" class="rounded-circle mb-3" alt="">
+                            <h2 class="card-title mb-3">Sara Smith</h3>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit harum consequuntur explicabo quisquam consectetur sed?</p>
+                                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
         </div>
     </section>
+    <!-- Contact & Map -->
+    <section class="p-5">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-md">
+                    <h2 class="text-center mb-4">Contact Info</h2>
+                    <ul class="list-group list-group-flush lead">
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location:</span> 50 Main Street, New York, NY 10012
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Enrrollment Phone:</span> +1 (800) 123-4567
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Student Phone:</span> (800) 123-4567
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Enrrollment Email:</span> (555) enrollment@fornteddbc.net
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Student Email:</span> student@frontenddbc.test
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md">
+                    <div id="map"></div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="./index.js"></script>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
+    <script>
+        mapboxgl.accessToken = 'pk.eyJ1IjoienppbnVlIiwiYSI6ImNsMWw1N3JlODAyYWMzYm53a2I5YmV5bHIifQ.q7UjQ9tAA3c6Ii76Rzc10w';
+        var map = new mapboxgl.Map({
+            container: 'map',
+            style: 'mapbox://styles/mapbox/streets-v11',
+            center: [-71.060982, 42.35725],
+            zoom: 17
+        });
+    </script>
 
 </body>
 
